--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -105,6 +105,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\c++libs\SFML-2.6.0-windows-vc17-64-bit\SFML-2.6.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>Default</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -134,6 +135,7 @@
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="GameMenu.cpp" />
+    <ClCompile Include="lifeBar.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="tinyxml\tinystr.cpp" />
@@ -160,6 +162,7 @@
     <ClInclude Include="func.h" />
     <ClInclude Include="GameMenu.h" />
     <ClInclude Include="Interface.h" />
+    <ClInclude Include="lifeBar.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="tinyxml\tinystr.h" />
     <ClInclude Include="tinyxml\tinyxml.h" />
